--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     </div>
 
     <script>
-        const API_BASE = '/api';
+        const API_BASE = window.location.origin + '/api';
         
         async function loadStats() {
             try {
@@ -330,7 +330,7 @@
                 }
             } catch (error) {
                 document.getElementById('loading').style.display = 'none';
-                document.getElementById('workflows').innerHTML = '<p>Error loading workflows.</p>';
+                document.getElementById('workflows').innerHTML = `<p>Error loading workflows: ${error.message}</p>`;
                 console.error('Error loading workflows:', error);
             }
         }
